test/testParser.java
// Generated from test.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class testParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, SPACE=3, NEWLINE=4, INDENT=5, COMMENT=6, MULTCOMMENT=7, 
		EQUALS_OPERATOR=8, ADD_OPERATOR=9, MUL_OPERATOR=10, MINUS_OPERATOR=11, 
		DIV_OPERATOR=12, BITWISE_NOT_OPERATOR=13, AND_OPERATOR=14, OR_OPERATOR=15, 
		LESS_THAN=16, GREATER_THAN=17, AT=18, MODULUS=19, NOT_OPERATOR=20, XOR_OPERATOR=21, 
		DOT=22, COMMA=23, COLON=24, OPEN_PAREN=25, CLOSE_PAREN=26, OPEN_BRACE=27, 
		CLOSE_BRACE=28, OPEN_BRACK=29, CLOSE_BRACK=30, SEMI_COLON=31, OTHER_TOKENS=32, 
		VARIABLE=33, AND=34, ADDR=35, AS=36, ASM=37, BIND=38, BLOCK=39, BREAK=40, 
		CASE=41, CAST=42, CONCEPT=43, CONST=44, CONTINUE=45, CONVERTER=46, DEFER=47, 
		DISCARD=48, DISTINCT=49, DIV=50, DO=51, ELIF=52, ELSE=53, END=54, ENUM=55, 
		EXCEPT=56, EXPORT=57, FINALLY=58, FOR=59, FROM=60, FUNC=61, IF=62, IMPORT=63, 
		IN=64, INCLUDE=65, INTERFACE=66, IS=67, ISNOT=68, ITERATOR=69, LET=70, 
		MACRO=71, METHOD=72, MIXIN=73, MOD=74, NIL=75, NOT=76, NOTIN=77, OBJECT=78, 
		OF=79, OR=80, OUT=81, PROC=82, PTR=83, RAISE=84, REF=85, RETURN=86, SHL=87, 
		SHR=88, STATIC=89, TEMPLATE=90, TRY=91, TUPLE=92, TYPE=93, USING=94, WHEN=95, 
		WHILE=96, XOR=97, YIELD=98, IDENTIFIER=99, INT_LIT=100, INT8_LIT=101, 
		INT16_LIT=102, INT32_LIT=103, INT64_LIT=104, UINT_LIT=105, UINT8_LIT=106, 
		UINT16_LIT=107, UINT32_LIT=108, UINT64_LIT=109, HEXDIGIT=110, OCTDIGIT=111, 
		BINDIGIT=112, HEX_LIT=113, DEC_LIT=114, OCT_LIT=115, BIN_LIT=116, EXP=117, 
		FLOAT_LIT=118, FLOAT32_SUFFIX=119, FLOAT32_LIT=120, FLOAT64_SUFFIX=121, 
		FLOAT64_LIT=122, TRIPLESTR_LIT=123, STR_LIT=124, CHAR_LIT=125, RSTR_LIT=126, 
		GENERALIZED_STR_LIT=127, GENERALIZED_TRIPLESTR_LIT=128, DIGIT=129, LETTER=130;
	public static final int
		RULE_dataType = 0, RULE_identifier = 1, RULE_number = 2, RULE_comma = 3, 
		RULE_colon = 4, RULE_equals = 5, RULE_plus = 6, RULE_declareStmt = 7, 
		RULE_simpleStmt = 8, RULE_plusStmt = 9, RULE_stmt = 10, RULE_module = 11, 
		RULE_start = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"dataType", "identifier", "number", "comma", "colon", "equals", "plus", 
			"declareStmt", "simpleStmt", "plusStmt", "stmt", "module", "start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'='", null, null, null, null, null, null, "'+'", "'*'", 
			"'-'", "'/'", "'~'", "'&'", "'|'", "'<'", "'>'", "'@'", "'%'", "'!'", 
			"'^'", "'.'", "','", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"';'", null, "'var'", "'and'", "'addr'", "'as'", "'asm'", "'bind'", "'block'", 
			"'break'", "'case'", "'cast'", "'concept'", "'const'", "'continue'", 
			"'converter'", "'defer'", "'discard'", "'distinct'", "'div'", "'do'", 
			"'elif'", "'else'", "'end'", "'enum'", "'except'", "'export'", "'finally'", 
			"'for'", "'from'", "'func'", "'if'", "'import'", "'in'", "'include'", 
			"'interface'", "'is'", "'isnot'", "'iterator'", "'let'", "'macro'", "'method'", 
			"'mixin'", "'mod'", "'nil'", "'not'", "'notin'", "'object'", "'of'", 
			"'or'", "'out'", "'proc'", "'ptr'", "'raise'", "'ref'", "'return'", "'shl'", 
			"'shr'", "'static'", "'template'", "'try'", "'tuple'", "'type'", "'using'", 
			"'when'", "'while'", "'xor'", "'yield'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "SPACE", "NEWLINE", "INDENT", "COMMENT", "MULTCOMMENT", 
			"EQUALS_OPERATOR", "ADD_OPERATOR", "MUL_OPERATOR", "MINUS_OPERATOR", 
			"DIV_OPERATOR", "BITWISE_NOT_OPERATOR", "AND_OPERATOR", "OR_OPERATOR", 
			"LESS_THAN", "GREATER_THAN", "AT", "MODULUS", "NOT_OPERATOR", "XOR_OPERATOR", 
			"DOT", "COMMA", "COLON", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
			"OPEN_BRACK", "CLOSE_BRACK", "SEMI_COLON", "OTHER_TOKENS", "VARIABLE", 
			"AND", "ADDR", "AS", "ASM", "BIND", "BLOCK", "BREAK", "CASE", "CAST", 
			"CONCEPT", "CONST", "CONTINUE", "CONVERTER", "DEFER", "DISCARD", "DISTINCT", 
			"DIV", "DO", "ELIF", "ELSE", "END", "ENUM", "EXCEPT", "EXPORT", "FINALLY", 
			"FOR", "FROM", "FUNC", "IF", "IMPORT", "IN", "INCLUDE", "INTERFACE", 
			"IS", "ISNOT", "ITERATOR", "LET", "MACRO", "METHOD", "MIXIN", "MOD", 
			"NIL", "NOT", "NOTIN", "OBJECT", "OF", "OR", "OUT", "PROC", "PTR", "RAISE", 
			"REF", "RETURN", "SHL", "SHR", "STATIC", "TEMPLATE", "TRY", "TUPLE", 
			"TYPE", "USING", "WHEN", "WHILE", "XOR", "YIELD", "IDENTIFIER", "INT_LIT", 
			"INT8_LIT", "INT16_LIT", "INT32_LIT", "INT64_LIT", "UINT_LIT", "UINT8_LIT", 
			"UINT16_LIT", "UINT32_LIT", "UINT64_LIT", "HEXDIGIT", "OCTDIGIT", "BINDIGIT", 
			"HEX_LIT", "DEC_LIT", "OCT_LIT", "BIN_LIT", "EXP", "FLOAT_LIT", "FLOAT32_SUFFIX", 
			"FLOAT32_LIT", "FLOAT64_SUFFIX", "FLOAT64_LIT", "TRIPLESTR_LIT", "STR_LIT", 
			"CHAR_LIT", "RSTR_LIT", "GENERALIZED_STR_LIT", "GENERALIZED_TRIPLESTR_LIT", 
			"DIGIT", "LETTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "test.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public testParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DataTypeContext extends ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDataType(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dataType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(testParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(testParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(testParser.DIGIT, i);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				match(DIGIT);
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommaContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(testParser.COMMA, 0); }
		public CommaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterComma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitComma(this);
		}
	}

	public final CommaContext comma() throws RecognitionException {
		CommaContext _localctx = new CommaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColonContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(testParser.COLON, 0); }
		public ColonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterColon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitColon(this);
		}
	}

	public final ColonContext colon() throws RecognitionException {
		ColonContext _localctx = new ColonContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_colon);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualsContext extends ParserRuleContext {
		public EqualsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterEquals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitEquals(this);
		}
	}

	public final EqualsContext equals() throws RecognitionException {
		EqualsContext _localctx = new EqualsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusContext extends ParserRuleContext {
		public TerminalNode ADD_OPERATOR() { return getToken(testParser.ADD_OPERATOR, 0); }
		public PlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitPlus(this);
		}
	}

	public final PlusContext plus() throws RecognitionException {
		PlusContext _localctx = new PlusContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_plus);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(ADD_OPERATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareStmtContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ColonContext colon() {
			return getRuleContext(ColonContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode LET() { return getToken(testParser.LET, 0); }
		public TerminalNode VARIABLE() { return getToken(testParser.VARIABLE, 0); }
		public List<CommaContext> comma() {
			return getRuleContexts(CommaContext.class);
		}
		public CommaContext comma(int i) {
			return getRuleContext(CommaContext.class,i);
		}
		public DeclareStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDeclareStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDeclareStmt(this);
		}
	}

	public final DeclareStmtContext declareStmt() throws RecognitionException {
		DeclareStmtContext _localctx = new DeclareStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declareStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_la = _input.LA(1);
			if ( !(_la==VARIABLE || _la==LET) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(44);
			identifier();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(45);
				comma();
				setState(46);
				identifier();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			colon();
			setState(54);
			dataType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStmtContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public EqualsContext equals() {
			return getRuleContext(EqualsContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SimpleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterSimpleStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitSimpleStmt(this);
		}
	}

	public final SimpleStmtContext simpleStmt() throws RecognitionException {
		SimpleStmtContext _localctx = new SimpleStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_simpleStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			identifier();
			setState(57);
			equals();
			setState(58);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusStmtContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public EqualsContext equals() {
			return getRuleContext(EqualsContext.class,0);
		}
		public List<TerminalNode> ADD_OPERATOR() { return getTokens(testParser.ADD_OPERATOR); }
		public TerminalNode ADD_OPERATOR(int i) {
			return getToken(testParser.ADD_OPERATOR, i);
		}
		public PlusStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterPlusStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitPlusStmt(this);
		}
	}

	public final PlusStmtContext plusStmt() throws RecognitionException {
		PlusStmtContext _localctx = new PlusStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_plusStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			identifier();
			setState(61);
			equals();
			setState(62);
			identifier();
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				match(ADD_OPERATOR);
				setState(64);
				identifier();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ADD_OPERATOR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public DeclareStmtContext declareStmt() {
			return getRuleContext(DeclareStmtContext.class,0);
		}
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public PlusStmtContext plusStmt() {
			return getRuleContext(PlusStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stmt);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				declareStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				simpleStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				plusStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI_COLON() { return getTokens(testParser.SEMI_COLON); }
		public TerminalNode SEMI_COLON(int i) {
			return getToken(testParser.SEMI_COLON, i);
		}
		public List<TerminalNode> INDENT() { return getTokens(testParser.INDENT); }
		public TerminalNode INDENT(int i) {
			return getToken(testParser.INDENT, i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABLE || _la==LET || _la==IDENTIFIER) {
				{
				setState(74);
				stmt();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INDENT) | (1L << SEMI_COLON) | (1L << VARIABLE))) != 0) || _la==LET || _la==IDENTIFIER) {
					{
					{
					setState(81);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SEMI_COLON:
						{
						setState(75);
						match(SEMI_COLON);
						}
						break;
					case INDENT:
						{
						setState(77); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(76);
							match(INDENT);
							}
							}
							setState(79); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==INDENT );
						}
						break;
					case VARIABLE:
					case LET:
					case IDENTIFIER:
						break;
					default:
						break;
					}
					setState(83);
					stmt();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
